fix after sign-up popups overlaping header

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -2795,6 +2795,7 @@ a.toggle_selector
       :display none
 
 .popover
+  z-index: 1000 !important
   .close
     @include opacity(0)
     @include transition(opacity, 0.2s)
